# OpenReflowTableApp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  main.cpp
application/: CMakeLists.txt  application.cpp
application/inc/application/: application.h  edit_popup_mode.h
presets_model/: CMakeLists.txt  presetslistmodel.cpp  presetslistmodel.h
reflow_process_controller/: CMakeLists.txt  reflow_controller.cpp
reflow_process_controller/inc/reflow_process_controller/: reflow_controller.hpp
resources/: BackButton.qml  ConnectionHandler.qml  ConnectionSetupPopup.qml  EditPresetPopup.qml  EditReflowStages.qml  PresetsView.qml  ReflowView.qml  RegulatorSettingsPopup.qml  SelectionView.qml  SharinganLoader.qml  main.qml  qml.qrc
rest_client/: CMakeLists.txt  reflow_client.cpp
rest_client/inc/reflow_rest_client/: reflow_client.hpp
toolchain_files/: windows_build.cmake
